SERVER-80407 Make count command parse nss correctly and make explain count command response has expected tenant prefix