src/mongo/db/commands/count_cmd.cpp
@@ -203,10 +203,7 @@ public:
 
         CountCommandRequest request(NamespaceStringOrUUID(NamespaceString{}));
         try {
-            request = CountCommandRequest::parse(
-                IDLParserContext(
-                    "count", false /* apiStrict */, opMsgRequest.getValidatedTenantId()),
-                opMsgRequest);
+            request = CountCommandRequest::parse(IDLParserContext("count"), opMsgRequest);
         } catch (...) {
             return exceptionToStatus();
         }
@@ -228,10 +225,12 @@ public:
                 return viewAggregation.getStatus();
             }
 
-            auto viewAggCmd =
-                OpMsgRequestBuilder::createWithValidatedTenancyScope(
-                    nss.dbName(), opMsgRequest.validatedTenancyScope, viewAggregation.getValue())
-                    .body;
+            auto viewAggCmd = OpMsgRequestBuilder::createWithValidatedTenancyScope(
+                                  nss.dbName(),
+                                  opMsgRequest.validatedTenancyScope,
+                                  viewAggregation.getValue(),
+                                  request.getSerializationContext())
+                                  .body;
             auto viewAggRequest = aggregation_request_helper::parseFromBSON(
                 opCtx,
                 nss,
@@ -334,6 +333,9 @@ public:
 
         if (ctx->getView()) {
             auto viewAggregation = countCommandAsAggregationCommand(request, nss);
+            const auto& requestSC = request.getSerializationContext();
+            SerializationContext aggRequestSC(
+                requestSC.getSource(), requestSC.getCallerType(), requestSC.getPrefix());
 
             // Relinquish locks. The aggregation command will re-acquire them.
             ctx.reset();
@@ -343,14 +345,17 @@ public:
             boost::optional<VTS> vts = boost::none;
             if (dbName.tenantId()) {
                 vts = VTS(dbName.tenantId().value(), VTS::TrustedForInnerOpMsgRequestTag{});
+                aggRequestSC.setTenantIdSource(true);
             }
-            auto aggRequest = OpMsgRequestBuilder::createWithValidatedTenancyScope(
-                dbName, vts, std::move(viewAggregation.getValue()));
 
+            auto aggRequest = OpMsgRequestBuilder::createWithValidatedTenancyScope(
+                dbName, vts, std::move(viewAggregation.getValue()), aggRequestSC);
             BSONObj aggResult = CommandHelpers::runCommandDirectly(opCtx, aggRequest);
 
-            uassertStatusOK(
-                ViewResponseFormatter(aggResult).appendAsCountResponse(&result, dbName.tenantId()));
+            uassertStatusOK(ViewResponseFormatter(aggResult).appendAsCountResponse(
+                &result,
+                dbName.tenantId(),
+                SerializationContext::stateCommandReply(request.getSerializationContext())));
             return true;
         }
 
