src/mongo/db/commands/explain_cmd.cpp
@@ -212,12 +212,9 @@ std::unique_ptr<CommandInvocation> CmdExplain::parse(OperationContext* opCtx,
             str::stream() << "Explain failed due to unknown command: "
                           << explainedObj.firstElementFieldName(),
             explainedCommand);
-    auto innerRequest = std::make_unique<OpMsgRequest>(
-        OpMsgRequestBuilder::createWithValidatedTenancyScope(dbName,
-                                                             request.validatedTenancyScope,
-                                                             explainedObj,
-                                                             {},
-                                                             cmdObj.getSerializationContext()));
+    auto innerRequest =
+        std::make_unique<OpMsgRequest>(OpMsgRequestBuilder::createWithValidatedTenancyScope(
+            dbName, request.validatedTenancyScope, explainedObj, cmdObj.getSerializationContext()));
     auto innerInvocation = explainedCommand->parseForExplain(opCtx, *innerRequest, verbosity);
     return std::make_unique<Invocation>(
         this, request, std::move(verbosity), std::move(innerRequest), std::move(innerInvocation));
